added get endpoint for domain request details, written SST for get and post domain request details
