# src/main/kotlin/com/shykial/kScrapperCore/controller/DomainRequestDetailsController.kt
@@ -1,8 +1,11 @@
 package com.shykial.kScrapperCore.controller
 
+import com.shykial.kScrapperCore.common.toResponseEntity
+import com.shykial.kScrapperCore.mapper.toResponse
 import com.shykial.kScrapperCore.service.DomainRequestDetailsService
 import generated.com.shykial.kScrapperCore.apis.DomainRequestDetailsApi
 import generated.com.shykial.kScrapperCore.models.DomainRequestDetailsRequest
+import generated.com.shykial.kScrapperCore.models.DomainRequestDetailsResponse
 import mu.KotlinLogging
 import org.springframework.http.HttpStatus
 import org.springframework.http.ResponseEntity
@@ -13,11 +16,15 @@ class DomainRequestDetailsController(
     private val domainRequestDetailsService: DomainRequestDetailsService,
 ) : DomainRequestDetailsApi {
     private val log = KotlinLogging.logger { }
+    override suspend fun findDomainRequestDetails(domainName: String): ResponseEntity<DomainRequestDetailsResponse> {
+        log.info("Received getDomainRequestDetails request for domainName $domainName")
+        return domainRequestDetailsService.findByDomainName(domainName).toResponse().toResponseEntity()
+    }
 
     override suspend fun addDomainRequestDetails(
         domainRequestDetailsRequest: DomainRequestDetailsRequest
     ): ResponseEntity<Unit> {
-        log.info("Registering domain request details request for domain: ${domainRequestDetailsRequest.domainName}")
+        log.info("Received addDomainRequestDetails request for domain: ${domainRequestDetailsRequest.domainName}")
         domainRequestDetailsService.addDomainRequestDetails(domainRequestDetailsRequest)
         return ResponseEntity(HttpStatus.CREATED)
     }
